      value, now works across join conditions where the two compared 
      types are not exactly the same class, but share the same 
      "affinity" - i.e. Integer and SmallInteger.  Also allows
      combinations of reflected and non-reflected types to work
      with 0.5 style type reflection, such as PGText/Text (note 0.6 
      reflects types as their generic versions).   [ticket:1556]
      
- sql
    - Fixed bug in two-phase transaction whereby commit() method
      didn't set the full state which allows subsequent close()
      call to succeed. [ticket:1603]
      
    - Fixed the "numeric" paramstyle, which apparently is the
      default paramstyle used by Informixdb.
      
    - Repeat expressions in the columns clause of a select
      are deduped based on the identity of each clause element,
      not the actual string.  This allows positional 
      elements to render correctly even if they all render
      identically, such as "qmark" style bind parameters.
      [ticket:1574]
    
    - The cursor associated with connection pool connections
      (i.e. _CursorFairy) now proxies `__iter__()` to the 
      underlying cursor correctly. [ticket:1632]

    - types now support an "affinity comparison" operation, i.e.
      that an Integer/SmallInteger are "compatible", or 
      a Text/String, PickleType/Binary, etc.  Part of 
      [ticket:1556].

- sqlite
    - sqlite dialect properly generates CREATE INDEX for a table
      that is in an alternate schema.  [ticket:1439]
      
- postgresql
    - Added support for reflecting the DOUBLE PRECISION type,
      via a new postgres.PGDoublePrecision object.  
      This is postgresql.DOUBLE_PRECISION in 0.6.
      [ticket:1085]

    - Added support for reflecting the INTERVAL YEAR TO MONTH
      and INTERVAL DAY TO SECOND syntaxes of the INTERVAL 
      type.  [ticket:460]

    - Corrected the "has_sequence" query to take current schema,
      or explicit sequence-stated schema, into account.